--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<ul class="box">
 		<li>Latest CssUserAgent <a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.js">cssua.js</a> (full)</li>
 		<li>Latest CssUserAgent <a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.min.js">cssua.min.js</a> (minified)</li>
+		<li>Distributed under <a href="https://bitbucket.org/mckamey/cssuseragent/src/tip/LICENSE.txt">The MIT License</a></li>
 	</ul>
 
 	<h2>resources</h2>
@@ -27,5 +28,6 @@
 		<li><a href="http://bitbucket.org/mckamey/cssuseragent">CssUserAgent source code</a></li>
 	</ul>
 
+	<footer>Copyright &copy; 2006-2010 Stephen M. McKamey</footer>
 </body>
 </html>
