- styling the docs

--- a/test/demo.html
+++ b/test/demo.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-	<h1 class="box"><a href="../">CssUserAgent (cssua.js)</a> Integration Tests</h1>
+	<h1 class="logo"><a href="../"><span class="sel">.css</span>{<span class="rule">user</span>:<span class="expr">agent</span>;}</a></h1>
 
 	<div class="browser-info">
 		<h4>Looks like you're using&hellip;</h4>
