--- a/index.html
+++ b/index.html
@@ -4,29 +4,44 @@
 	<title>CssUserAgent (cssua.js)</title>
 
 	<link href="test/styles/main.css" rel="stylesheet" type="text/css" />
+	<link href="styles/syntax.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
-	<h1 class="box">CssUserAgent (cssua.js)</h1>
+	<h1 class="logo"><span class="sel">.css</span>{<span class="rule">user</span>:<span class="expr">agent</span>;}</h1>
+	<p class="summary"><em>Avoid CSS hacks!</em> Use <code>cssua.js</code> to apply special CSS classes to your pages allowing you to use valid CSS to work around browser-specific quirks. <a href="test/demo.html">Read more&hellip;</a></p>
 
-	<h2>test results</h2>
-	<ul class="box">
-		<li><a href="test/integration.html">Demo / Integration tests</a></li>
-		<li><a href="test/unit.html">Unit tests</a></li>
-	</ul>
+	<div class="box">
+		<h2>Docs</h2>
+		<ul>
+			<li><a href="test/demo.html" class="minimal">demonstration</a>
+				<span class="action-info">watch it go</span></li>
+			<li><a href="test/unit.html" class="minimal">unit tests</a>
+				<span class="action-info">test it out</span></li>
+		</ul>
+	</div>
 
-	<h2>download</h2>
-	<ul class="box">
-		<li>Latest CssUserAgent <a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.js">cssua.js</a> (full)</li>
-		<li>Latest CssUserAgent <a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.min.js">cssua.min.js</a> (minified)</li>
-		<li>Distributed under <a href="https://bitbucket.org/mckamey/cssuseragent/src/tip/LICENSE.txt">The MIT License</a></li>
-	</ul>
+	<div class="box">
+		<h2>Downloads</h2>
+		<ul>
+			<li><a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.js" class="minimal">cssua.js</a>
+				<span class="action-info">full script</span></li>
+			<li><a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.min.js" class="minimal">cssua.min.js</a>
+				<span class="action-info">minified script</span></li>
+			<li><a href="https://bitbucket.org/mckamey/cssuseragent/raw/tip/LICENSE.txt" class="minimal">LICENSE.txt</a>
+				<span class="action-info">MIT License</span></li>
+		</ul>
+	</div>
 
-	<h2>resources</h2>
-	<ul class="box">
-		<li><a href="http://cssuseragent.org">CssUserAgent website</a></li>
-		<li><a href="http://bitbucket.org/mckamey/cssuseragent">CssUserAgent source code</a></li>
-	</ul>
+	<div class="box">
+		<h2>Links</h2>
+		<ul>
+			<li><a href="http://cssuseragent.org" class="minimal">CssUserAgent.org</a>
+				<span class="action-info">the website</span></li>
+			<li><a href="http://bitbucket.org/mckamey/cssuseragent" class="minimal">source code</a>
+				<span class="action-info">the latest bits</span></li>
+		</ul>
+	</div>
 
 	<footer>Copyright &copy; 2006-2010 Stephen M. McKamey</footer>
 </body>
