--- a/index.html
+++ b/index.html
@@ -5,42 +5,46 @@
 
 	<link href="test/styles/main.css" rel="stylesheet" type="text/css" />
 	<link href="styles/syntax.css" rel="stylesheet" type="text/css" />
+
+	<script src="cssua.min.js" type="text/javascript"></script>
 </head>
 <body>
 
 	<h1 class="logo"><span class="sel">.css</span>{<span class="rule">user</span>:<span class="expr">agent</span>;}</h1>
 	<p class="summary"><em>Avoid CSS hacks!</em> Use <code>cssua.js</code> to apply special CSS classes to your pages allowing you to use valid CSS to work around browser-specific quirks. <a href="test/demo.html">Read more&hellip;</a></p>
 
-	<div class="box">
-		<h2>Docs</h2>
-		<ul>
-			<li><a href="test/demo.html" class="minimal">demonstration</a>
-				<span class="action-info">watch it go</span></li>
-			<li><a href="test/unit.html" class="minimal">unit tests</a>
-				<span class="action-info">test it out</span></li>
-		</ul>
-	</div>
+	<div style="overflow:hidden;">
+		<div class="box">
+			<h2>Docs</h2>
+			<ul>
+				<li><a href="test/demo.html" class="minimal glow">demonstration</a>
+					<span class="action-info">watch it go</span></li>
+				<li><a href="test/unit.html" class="minimal">unit tests</a>
+					<span class="action-info">test it out</span></li>
+			</ul>
+		</div>
 
-	<div class="box">
-		<h2>Downloads</h2>
-		<ul>
-			<li><a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.js" class="minimal">cssua.js</a>
-				<span class="action-info">full script</span></li>
-			<li><a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.min.js" class="minimal">cssua.min.js</a>
-				<span class="action-info">minified script</span></li>
-			<li><a href="https://bitbucket.org/mckamey/cssuseragent/raw/tip/LICENSE.txt" class="minimal">LICENSE.txt</a>
-				<span class="action-info">MIT License</span></li>
-		</ul>
-	</div>
+		<div class="box">
+			<h2>Downloads</h2>
+			<ul>
+				<li><a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.js" class="minimal">cssua.js</a>
+					<span class="action-info">full script</span></li>
+				<li><a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.min.js" class="minimal">cssua.min.js</a>
+					<span class="action-info">minified script</span></li>
+				<li><a href="https://bitbucket.org/mckamey/cssuseragent/raw/tip/LICENSE.txt" class="minimal">LICENSE.txt</a>
+					<span class="action-info">MIT License</span></li>
+			</ul>
+		</div>
 
-	<div class="box">
-		<h2>Links</h2>
-		<ul>
-			<li><a href="http://cssuseragent.org" class="minimal">CssUserAgent.org</a>
-				<span class="action-info">the website</span></li>
-			<li><a href="http://bitbucket.org/mckamey/cssuseragent" class="minimal">source code</a>
-				<span class="action-info">the latest bits</span></li>
-		</ul>
+		<div class="box">
+			<h2>Links</h2>
+			<ul>
+				<li><a href="http://cssuseragent.org" class="minimal">CssUserAgent.org</a>
+					<span class="action-info">the website</span></li>
+				<li><a href="http://bitbucket.org/mckamey/cssuseragent" class="minimal">source code</a>
+					<span class="action-info">the latest bits</span></li>
+			</ul>
+		</div>
 	</div>
 
 	<footer>Copyright &copy; 2006-2010 Stephen M. McKamey</footer>
