--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>CssUserAgent (cssua.js)</title>
 
 	<link href="test/styles/main.css" rel="stylesheet" type="text/css" />
