--- a/test/unit.html
+++ b/test/unit.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>CssUserAgent (cssua.js) Unit Tests</title>
 	<link href="../lib/qunit/qunit.css" rel="stylesheet" type="text/css" />
 
