--- a/test/demo.html
+++ b/test/demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>CssUserAgent (cssua.js) Integration Tests</title>
+	<title>CssUserAgent (cssua.js) Demo</title>
 
 	<link href="styles/main.css" rel="stylesheet" type="text/css" />
 	<link href="styles/zebra.css" rel="stylesheet" type="text/css" />
