--- a/test/demo.html
+++ b/test/demo.html
@@ -208,5 +208,6 @@
 
 	<footer>Copyright &copy; 2006-2010 Stephen M. McKamey</footer>
 
+	<script src="/ga.js" type="text/javascript" defer></script>
 </body>
 </html>
