--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>CssUserAgent (cssua.js)</title>
 
 	<link href="test/styles/main.css" rel="stylesheet" type="text/css" />
-	<link href="styles/syntax.css" rel="stylesheet" type="text/css" />
 
 	<script src="cssua.min.js" type="text/javascript"></script>
 </head>
@@ -49,5 +48,6 @@
 	</div>
 
 	<footer>Copyright &copy; 2006-2010 Stephen M. McKamey</footer>
+	<script src="/ga.js" type="text/javascript" defer></script>
 </body>
 </html>
