--- a/test/unit.html
+++ b/test/unit.html
@@ -16,5 +16,6 @@
 	<h2 id="qunit-banner"></h2>  
 	<h2 id="qunit-userAgent"></h2>  
 	<ol id="qunit-tests"></ol> 
+	<script src="/ga.js" type="text/javascript" defer></script>
 </body>
 </html>
