--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 					<span class="action-info">watch it go</span></li>
 				<li><a href="test/unit.html" class="minimal">unit tests</a>
 					<span class="action-info">test it out</span></li>
+				<li><a href="faq.html" class="minimal">faq</a>
+					<span class="action-info">what? why?</span></li>
 			</ul>
 		</div>
 
@@ -47,7 +49,7 @@
 		</div>
 	</div>
 
-	<footer>Copyright &copy; 2006-2010 Stephen M. McKamey</footer>
+	<footer>Copyright &copy; 2006-2011 Stephen M. McKamey</footer>
 	<script src="/ga.js" type="text/javascript" defer></script>
 </body>
 </html>
