--- a/test/demo.html
+++ b/test/demo.html
@@ -49,6 +49,7 @@
 					class="badge-link css-badge"
 					title="W3C CSS Validation"
 					onclick="window.open(this.href+'validator?profile=css3&amp;uri='+document.location);return false;"></a></li>
+			<li><a href="http://twitter.com/share" class="twitter-share-button" data-url="http://cssuseragent.org/" data-text="Avoid CSS hacks! Use CssUserAgent to work around browser-specific quirks" data-count="none"></a></li>
 		</ul>
 	</div>
 
@@ -248,8 +249,11 @@
 		</div>
 	</div>
 
-	<footer>Copyright &copy; 2006-2011 Stephen M. McKamey</footer>
-
+	<footer>
+		<div style="float:left"><a href="http://twitter.com/share" class="twitter-share-button" data-url="http://cssuseragent.org/" data-text="Avoid CSS hacks! Use CssUserAgent to work around browser-specific quirks" data-count="none"></a></div>
+		Copyright &copy; 2006-2011 Stephen M. McKamey
+	</footer>
+	<script src="http://platform.twitter.com/widgets.js" type="text/javascript" defer="defer"></script>
 	<script src="/ga.js" type="text/javascript" defer></script>
 </body>
 </html>
