making use of .js & .no-js in demo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
 <head>
 	<meta charset="UTF-8">
 	<title>CssUserAgent (cssua.js)</title>
@@ -52,7 +52,7 @@
 
 	<footer>
 		<div style="float:left"><a href="http://twitter.com/share" class="twitter-share-button" data-url="http://cssuseragent.org/" data-text="Avoid CSS hacks! Use CssUserAgent to work around browser-specific quirks" data-count="none"></a></div>
-		Copyright &copy; 2006-2011 Stephen M. McKamey
+		Copyright &copy; 2006-2011 <a href="http://mck.me">Stephen M. McKamey</a>
 	</footer>
 	<script src="http://platform.twitter.com/widgets.js" type="text/javascript" defer="defer"></script>
 	<script src="/ga.js" type="text/javascript" defer></script>
