adding tests/fix for Chrome-iOS UA

--- a/test/demo.html
+++ b/test/demo.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>CssUserAgent (cssua.js) Demo</title>
 
+	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<link href="styles/main.css" rel="stylesheet" type="text/css" />
 	<link href="styles/zebra.css" rel="stylesheet" type="text/css" />
 	<link href="styles/syntax.css" rel="stylesheet" type="text/css" />
