JSDocs cleanup & improved Silk support

--- a/test/demo.html
+++ b/test/demo.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<title>CssUserAgent (cssua.js) Demo</title>
 
+	<meta name="viewport" content="user-scalable=yes" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
+
 	<link href="styles/main.css" rel="stylesheet" type="text/css" />
 	<link href="styles/zebra.css" rel="stylesheet" type="text/css" />
 	<link href="styles/syntax.css" rel="stylesheet" type="text/css" />
