--- a/test/demo.html
+++ b/test/demo.html
@@ -14,7 +14,7 @@
 	<link href="styles/validation.css" rel="stylesheet" type="text/css" />
 
 	<!--[if lt IE 9]><script src="../lib/html5shiv/html5.js"></script><![endif]-->
-	<script src="../cssua.min.js" type="text/javascript"></script>
+	<script src="../cssua.demo.js" type="text/javascript"></script>
 </head>
 <body>
 
