--- a/test/unit.html
+++ b/test/unit.html
@@ -6,7 +6,7 @@
 	<link href="../lib/qunit/qunit.css" rel="stylesheet" type="text/css" />
 
 	<script src="../lib/qunit/qunit.js" type="text/javascript"></script>
-	<script src="../cssua.min.js" type="text/javascript"></script>
+	<script src="../cssua.demo.js" type="text/javascript"></script>
 	<script src="parseTests.js" type="text/javascript"></script>
 	<script src="formatTests.js" type="text/javascript"></script>
 	<script src="encodeTests.js" type="text/javascript"></script>
