Updating repo links.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 		<div class="box">
 			<h2>Downloads</h2>
 			<ul>
-				<li><a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.js" class="minimal">cssua.js</a>
+				<li><a href="https://raw.githubusercontent.com/mckamey/cssuseragent/master/cssua.js" class="minimal">cssua.js</a>
 					<span class="action-info">full script</span></li>
-				<li><a href="http://bitbucket.org/mckamey/cssuseragent/raw/tip/cssua.min.js" class="minimal">cssua.min.js</a>
+				<li><a href="https://raw.githubusercontent.com/mckamey/cssuseragent/master/cssua.min.js" class="minimal">cssua.min.js</a>
 					<span class="action-info">minified script</span></li>
-				<li><a href="https://bitbucket.org/mckamey/cssuseragent/raw/tip/LICENSE.txt" class="minimal">LICENSE.txt</a>
+				<li><a href="https://raw.githubusercontent.com/mckamey/cssuseragent/master/LICENSE.txt" class="minimal">LICENSE.txt</a>
 					<span class="action-info">MIT License</span></li>
 			</ul>
 		</div>
@@ -44,7 +44,7 @@
 			<ul>
 				<li><a href="http://cssuseragent.org" class="minimal">CssUserAgent.org</a>
 					<span class="action-info">the website</span></li>
-				<li><a href="http://bitbucket.org/mckamey/cssuseragent" class="minimal">source code</a>
+				<li><a href="https://github.com/mckamey/cssuseragent" class="minimal">source code</a>
 					<span class="action-info">the latest bits</span></li>
 			</ul>
 		</div>
