--- a/test/demo.html
+++ b/test/demo.html
@@ -309,6 +309,7 @@
 
 	<footer>
 		<div style="float:left"><a href="http://twitter.com/share" class="twitter-share-button" data-url="http://cssuseragent.org/" data-text="Avoid CSS hacks! Use CssUserAgent to work around browser-specific quirks" data-count="none"></a></div>
+		<div style="float:left;margin:-0.4em 0 0 4em">Tested with <a href="http://www.browserstack.com"><img src="/test/styles/browsers/BrowserStack_128.png" alt="BrowserStack" style="display:inline-block;margin-bottom:-0.8em;" /></a></div>
 		Copyright &copy; 2006-2011 <a href="http://mck.me">Stephen M. McKamey</a>
 	</footer>
 	<script src="http://platform.twitter.com/widgets.js" type="text/javascript" defer="defer"></script>
