--- a/faq.html
+++ b/faq.html
@@ -52,7 +52,12 @@
 	This typically isn't an issue for most users. But be warned not to rely upon browser-specific CSS classes for the accessibility of your content.
 	As mentioned earlier, this is intended for layout fixes and polish not core business logic.</p>
 
-	<footer>Copyright &copy; 2006-2011 Stephen M. McKamey</footer>
+	<footer>
+		<div style="float:left"><a href="http://twitter.com/share" class="twitter-share-button" data-url="http://cssuseragent.org/" data-text="Avoid CSS hacks! Use CssUserAgent to work around browser-specific quirks" data-count="none"></a></div>
+		<div style="float:left;margin:-0.4em 0 0 4em">Tested with <a href="http://www.browserstack.com"><img src="/test/styles/browsers/BrowserStack_128.png" alt="BrowserStack" style="display:inline-block;margin-bottom:-0.8em;" /></a></div>
+		Copyright &copy; 2006-2011 <a href="http://mck.me">Stephen M. McKamey</a>
+	</footer>
+	<script src="http://platform.twitter.com/widgets.js" type="text/javascript" defer="defer"></script>
 	<script src="/ga.js" type="text/javascript" defer></script>
 </body>
 </html>
